chore: update .env.sample with cloudflare keys

--- a/.env.sample
+++ b/.env.sample
@@ -1,5 +1,5 @@
 # .env file
-ZONE_ID=your_zone_id_here
-CF_API_KEY=your_CF_API_KEY_here
-CF_API_EMAIL=your_CF_API_EMAIL_here
+ZONE_ID=88212a53b6feba598b197f3508f35b52
+CF_API_KEY=59baec324b90ee13e139553f2f8f797a1af13
+CF_API_EMAIL=safe@hostspaceng.com
 VUE_APP_PROXY_URL=http://127.0.0.1:5000/proxy
