--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,3 +12,9 @@ services:
     container_name: vue-project #running container name
     ports:
       - "8080:8080" #ports to open for running containers
+
+  nginx-proxy:
+    image: nginx-http-proxy #image from local file
+    container_name: nginx-proxy #running container name
+    ports:
+      - "80:80" #ports to open for running containers
