--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -15,6 +15,7 @@ services:
 
   nginx-proxy:
     image: nginx-http-proxy #image from local file
+    network_mode: host
     container_name: nginx-proxy #running container name
     ports:
       - "80:80" #ports to open for running containers
