--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -15,16 +15,18 @@ RUN npm install
 COPY . .
 
 # build to package the frontend code
-RUN npm build
+RUN npm run build
 
 # production stage
-FROM nginx
+FROM nginx:alpine3.18
+
+WORKDIR /app/dist
 
 # overwrite the default nginx configuration
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 # Copy the build folder from the build stage to serve in ngnx
-COPY --from=builder /app/dist /usr/share/nginx/html
+COPY --from=builder /app/dist .
 
 # expose port 80
 EXPOSE 80
