added some files and adjested the jenkinsfile

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,6 +6,9 @@ services:
     container_name: python-project #running container name
     ports:
       - "5000:5000" #ports to open for running containers
+    volumes:
+      - ./:/app
+      - :/app/requirements.txt
 
   vue-app:
     image: vue-project #image from local file
