--- a/.github/workflows/deploy-fe.yml
+++ b/.github/workflows/deploy-fe.yml
@@ -54,7 +54,7 @@ jobs:
               id: build-image
               env:
                 REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-                REPOSITORY: ${{ vars.ECR_REPOSITORY_NAME }}
+                REPOSITORY: ${{ env.ECR_REPOSITORY_NAME }}
                 IMAGE_TAG: ${{ steps.short-sha.outputs.sha }}
               run: |
                 docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
