--- a/.github/workflows/deploy-fe.yml
+++ b/.github/workflows/deploy-fe.yml
@@ -28,6 +28,9 @@ jobs:
 
             - name: Copy Repo Code
               uses: actions/checkout@v4
+              with: 
+                sparse-checkout: |
+                  frontend
             
             - name: Configure AWS credentials
               uses: aws-actions/configure-aws-credentials@v4
@@ -57,7 +60,7 @@ jobs:
                 REPOSITORY: ${{ env.ECR_REPOSITORY_NAME }}
                 IMAGE_TAG: ${{ steps.short-sha.outputs.sha }}
               run: |
-                docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG .
+                docker build -t $REGISTRY/$REPOSITORY:$IMAGE_TAG ./frontend
                 docker push $REGISTRY/$REPOSITORY:$IMAGE_TAG
                 echo "image=$REGISTRY/$REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
