test backend pipeline again

--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -31,7 +31,7 @@ jobs:
               uses: actions/checkout@v4
               with: 
                 sparse-checkout: |
-                  frontend
+                  backend
             
             - name: Configure AWS credentials
               uses: aws-actions/configure-aws-credentials@v4
