--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -15,16 +15,16 @@ jobs:
 
     - name: Build and test backend
       run: |
-        docker-compose -f docker-compose.yml -f docker-compose.ci.yml build backend
-        docker-compose -f docker-compose.yml -f docker-compose.ci.yml run backend python -m pytest
+        docker-compose -f docker-compose.yml build backend
+        docker-compose -f docker-compose.yml run backend python -m pytest
       env:
         DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Build and test frontend
       run: |
-        docker-compose -f docker-compose.yml -f docker-compose.ci.yml build frontend
-        docker-compose -f docker-compose.yml -f docker-compose.ci.yml run frontend npm test
+        docker-compose -f docker-compose.yml build frontend
+        docker-compose -f docker-compose.yml run frontend npm test
       env:
         DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
