made new docker compose file and added testing logics to my jenkins file in the testing stage

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
     server {
         listen 80;
-        root /app/dist;
+        root /usr/share/nginx/html;
 
         location / {
             try_files $uri $uri/ /index.html;
