add k8s deployments files

--- a/dockercompose.yaml
+++ b/dockercompose.yaml
@@ -10,10 +10,10 @@ services:
       - 5000:5000
 
   vue-app:
-    image: achebeh/community-challenge-frontend 
-    # build:
-    #   context: ./frontend
-    #   dockerfile: Dockerfile
+    # image: achebeh/community-challenge-frontend 
+    build:
+      context: ./frontend
+      dockerfile: Dockerfile
     env_file:
       - .env
     ports:
