--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   backend:
     build:
         context: . 
-        dockerfile: backendDockerfile
+        dockerfile: backend
     ports:
       - "5000:5000"
     networks:
@@ -11,7 +11,7 @@ services:
   frontend:
     build:
         context: . 
-        dockerfile: frontendDockerfile
+        dockerfile: frontend
     ports:
       - "8080:80"
     networks:
