--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   backend:
     build:
         context: . 
-        dockerfile: backend
+        dockerfile: backend.txt
     ports:
       - "5000:5000"
     networks:
@@ -11,7 +11,7 @@ services:
   frontend:
     build:
         context: . 
-        dockerfile: frontend
+        dockerfile: frontend.txt
     ports:
       - "8080:80"
     networks:
