--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -10,7 +10,6 @@ on:
 
 permissions:
   contents: read
-  pull-requests: write
 
 jobs:
   build:
@@ -22,19 +21,15 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Login to Docker Hub
-      run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+      run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PAT }}
 
-    - name: Build and tag Docker image
-      run: docker build -t myapp ./community-challenge/Dockerfile
-
-    - name: Tag the Docker image
-      run: docker tag myapp:latest ${{ secrets.DOCKERHUB_USERNAME }}/myapp:latest
-
-    - name: Push Docker image to Docker Hub
-      run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/myapp:latest
+    - name: Build and push Docker image
+      run: |
+        docker build -t myapp ./community-challenge/Dockerfile
+        docker push ${{ secrets.DOCKERHUB_USERNAME }}/myapp:latest
 
     - name: Deploy with Docker
       if: success()
       run: |
         docker pull ${{ secrets.DOCKERHUB_USERNAME }}/myapp:latest
-        docker run -d --name myapp -p 80:80 o${{ secrets.DOCKERHUB_USERNAME }}/myapp:latest
+        docker run -d --name myapp -p 80:80 ${{ secrets.DOCKERHUB_USERNAME }}/myapp:latest
