--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,6 +2,8 @@ name: Docker Image CI
 
 on:
   push:
+    paths:
+      - ./**
     branches:
       - main
   pull_request:
@@ -21,11 +23,11 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Login to Docker Hub
-      run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PAT }}
+      run: docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Build and push Docker image
       run: |
-        docker build -t myapp ./community-challenge/Dockerfile
+        docker build -t myapp ./Dockerfile
         docker push ${{ secrets.DOCKERHUB_USERNAME }}/myapp:latest
 
     - name: Deploy with Docker
