--- a/hostober_challenge_cloudformation.yaml
+++ b/hostober_challenge_cloudformation.yaml
@@ -1,108 +1,87 @@
+---
 AWSTemplateFormatVersion: '2010-09-09'
-Description: Amazon deployments
-
+Description: 'Amazon EKS Cluster'
 
 Parameters:
   ClusterName:
     Type: String
     Default: my-eks-cluster
-    Description: Name for the EKS cluster
-
+  NumberOfWorkerNodes:
+    Type: Number
+    Default: 1
+  WorkerNodesInstanceType:
+    Type: String
+    Default: t2.micro
+  KubernetesVersion:
+    Type: String
+    Default: 1.23
+    
 Resources:
-  MyVPC:
-    Type: AWS::EC2::VPC
-    Properties:
-      CidrBlock: 10.0.0.0/16
-      EnableDnsSupport: true
-      EnableDnsHostnames: true
-      Tags:
-        - Key: Name
-          Value: MyVPC
 
-  MySubnet1:
-    Type: AWS::EC2::Subnet
-    Properties:
-      AvailabilityZone: us-east-1a
-      VpcId: !Ref MyVPC
-      CidrBlock: 10.0.1.0/24
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value: MySubnet
+  ###########################################
+  ## Roles
+  ###########################################
+  EksRole:
+    Type: AWS::IAM::Role
+    Properties: 
+      RoleName: my.eks.cluster.role
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - eks.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Path: /
+      ManagedPolicyArns:
+        - "arn:aws:iam::aws:policy/AmazonEKSClusterPolicy"
+  EksNodeRole:
+    Type: AWS::IAM::Role
+    Properties: 
+      RoleName: my.eks.node.role
+      AssumeRolePolicyDocument:
+        Version: "2012-10-17"
+        Statement:
+          - Effect: Allow
+            Principal:
+              Service:
+                - ec2.amazonaws.com
+            Action:
+              - sts:AssumeRole
+      Path: /
+      ManagedPolicyArns:
+        - "arn:aws:iam::aws:policy/AmazonEKSWorkerNodePolicy"
+        - "arn:aws:iam::aws:policy/AmazonEC2ContainerRegistryReadOnly"
+        - "arn:aws:iam::aws:policy/AmazonEKS_CNI_Policy"
 
-  MySubnet2:
-    Type: AWS::EC2::Subnet
-    Properties:
-      AvailabilityZone: us-east-1b
-      VpcId: !Ref MyVPC
-      CidrBlock: 10.0.2.0/24
-      MapPublicIpOnLaunch: true
-      Tags:
-        - Key: Name
-          Value: MySubnet
+  ###########################################
+  ## Eks Cluster
+  ###########################################
 
-  MyInternetGateway:
-    Type: AWS::EC2::InternetGateway
-    Properties:
-      Tags:
-        - Key: Name
-          Value: MyInternetGateway
-
-  AttachGateway:
-    Type: AWS::EC2::VPCGatewayAttachment
-    Properties:
-      VpcId: !Ref MyVPC
-      InternetGatewayId: !Ref MyInternetGateway
-  
-  MySecurityGroup:
-    Type: AWS::EC2::SecurityGroup
-    Properties:
-      GroupDescription: Allow HTTP and HTTPS inbound traffic and all outbound traffic
-      VpcId: !Ref MyVPC
-      SecurityGroupIngress:
-        - IpProtocol: tcp
-          FromPort: 80
-          ToPort: 80
-          CidrIp: 0.0.0.0/0  # Allow HTTP from anywhere
-        - IpProtocol: tcp
-          FromPort: 443
-          ToPort: 443
-          CidrIp: 0.0.0.0/0  # Allow HTTPS from anywhere
-      SecurityGroupEgress:
-        - IpProtocol: -1
-          CidrIp: 0.0.0.0/0  # Allow all outbound traffic
-
-
-  EKSCluster:
+  EksCluster:
     Type: AWS::EKS::Cluster
     Properties:
       Name: !Ref ClusterName
-      RoleArn: arn:aws:iam::206080409328:role/aws-service-role/eks.amazonaws.com/AWSServiceRoleForAmazonEKS
+      Version: !Ref KubernetesVersion
+      RoleArn: !GetAtt EksRole.Arn
       ResourcesVpcConfig:
         SecurityGroupIds:
-          - !Ref MySecurityGroup
-        SubnetIds:
-          - !Ref MySubnet1
-          - !Ref MySubnet2
+          - !ImportValue ControlPlaneSecurityGroupId
+        SubnetIds: !Split [ ',', !ImportValue PrivateSubnetIds ]
 
-  NodeGroup:
+  EksNodegroup:
     Type: AWS::EKS::Nodegroup
+    DependsOn: EksCluster
     Properties:
-      ClusterName: !Ref EKSCluster
-      NodeRole: arn:aws:iam::206080409328:role/STS_AssumeRole
-      Subnets:
-        - !Ref MySubnet1
-        - !Ref MySubnet2
-      InstanceTypes:
-        - t2.micro
+      ClusterName: !Ref ClusterName
+      NodeRole: !GetAtt EksNodeRole.Arn
       ScalingConfig:
-        MinSize: 1
-        MaxSize: 2
-        DesiredSize: 1
-      Labels:
-        app: hostober_challenge_apps
-
-Outputs:
-  ClusterNameOutput:
-    Description: The name of the EKS cluster.
-    Value: !Ref EKSCluster
+        MinSize:
+          Ref: NumberOfWorkerNodes
+        DesiredSize:
+          Ref: NumberOfWorkerNodes
+        MaxSize:
+          Ref: NumberOfWorkerNodes
+      Subnets: !Split [ ',', !ImportValue PrivateSubnetIds ]
