--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -43,15 +43,15 @@ jobs:
     - name: Set up private key
       run: |
         # Create a private key file and set appropriate permissions
-        echo "$SSH_PRIVATE_KEY" > private_key.pem
-        chmod 600 private_key.pem
+        echo "$SSH_PRIVATE_KEY" > key.pem
+        chmod 400 key.pem
       env:
         SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
 
     - name: Deploy to EC2
       run: |
         # SSH into your EC2 instance and deploy the Docker container
-        ssh -i private_key.pem ec2-user@your-ec2-instance-ip 'docker pull myapp:latest && docker run -d --name myapp -p 8080:80 myapp:latest'
+        ssh -i "key.pem" ubuntu@ec2-34-207-242-228.compute-1.amazonaws.com 'docker pull myapp:latest && docker run -d --name myapp -p 8080:80 myapp:latest'
       env:
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
         AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
