--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,23 +13,62 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-    - name: Set up AWS CLI
-      run: |
+   
+
+  #  - name: Set up AWS CLI
+   #   run: |
         # Create AWS credentials file
-        echo "[default]" > ~/.aws/credentials
-        echo "aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
-        echo "aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
-        echo "region = ${{ secrets.AWS_REGION }}" >> ~/.aws/credentials
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
+    #    echo "[default]" > ~/.aws/credentials
+     #   echo "aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
+      #  echo "aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
+       # echo "region = ${{ secrets.AWS_REGION }}" >> ~/.aws/credentials
+#      env:
+ #       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+  #      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+   #     AWS_REGION: ${{ secrets.AWS_REGION }}
+    - name: Configure AWS credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
+          aws-region: ${{ env.AWS_REGION }}
+
+    - name: Add terraform user
+      run: |
+          mkdir -p ~/.aws
+
+          mkdir -p ~/.aws
+
+          touch ~/.aws/config
+
+          touch ~/.aws/credentials
+
+          echo '
+
+          [profile terraform]
+
+          region = us-east-1
+
+          ' >> ~/.aws/config
+
+          echo '
+
+          [terraform]
+
+          aws_access_key_id = ${{ env.AWS_ACCESS_KEY_ID }}
+
+          aws_secret_access_key = ${{ env.AWS_SECRET_ACCESS_KEY }}
+
+          ' >> ~/.aws/credentials
+
+          cat ~/.aws/credentials 
+          
 
     - name: Build Docker Image
       run: |
         # Build your Docker image (change the build command accordingly)
         docker build -t myapp:latest .
-      working-directory: ./path/to/your/dockerfile/directory
+      working-directory: ./Dockerfile
 
     - name: Push Docker Image to Docker Hub
       run: |
