--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -13,62 +13,18 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v2
 
-   
-
-  #  - name: Set up AWS CLI
-   #   run: |
-        # Create AWS credentials file
-    #    echo "[default]" > ~/.aws/credentials
-     #   echo "aws_access_key_id = ${{ secrets.AWS_ACCESS_KEY_ID }}" >> ~/.aws/credentials
-      #  echo "aws_secret_access_key = ${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> ~/.aws/credentials
-       # echo "region = ${{ secrets.AWS_REGION }}" >> ~/.aws/credentials
-#      env:
- #       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-  #      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-   #     AWS_REGION: ${{ secrets.AWS_REGION }}
     - name: Configure AWS credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-          aws-access-key-id: ${{ env.AWS_ACCESS_KEY_ID }}
-          aws-secret-access-key: ${{ env.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ${{ env.AWS_REGION }}
-
-    - name: Add terraform user
-      run: |
-          mkdir -p ~/.aws
-
-          mkdir -p ~/.aws
-
-          touch ~/.aws/config
-
-          touch ~/.aws/credentials
-
-          echo '
-
-          [profile terraform]
-
-          region = us-east-1
-
-          ' >> ~/.aws/config
-
-          echo '
-
-          [terraform]
-
-          aws_access_key_id = ${{ env.AWS_ACCESS_KEY_ID }}
-
-          aws_secret_access_key = ${{ env.AWS_SECRET_ACCESS_KEY }}
-
-          ' >> ~/.aws/credentials
-
-          cat ~/.aws/credentials 
-          
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ${{ secrets.AWS_REGION }}
 
     - name: Build Docker Image
       run: |
         # Build your Docker image (change the build command accordingly)
         docker build -t myapp:latest .
-      working-directory: ./Dockerfile
+      working-directory: ./  # Remove "Dockerfile" as it's not a valid working-directory
 
     - name: Push Docker Image to Docker Hub
       run: |
@@ -89,9 +45,19 @@ jobs:
 
     - name: Deploy to EC2
       run: |
+        # Copy the private key to the runner for SSH authentication
+        echo "$SSH_PRIVATE_KEY" > key.pem
+        chmod 400 key.pem
+
+        # Replace the EC2 instance IP address with your own
+        EC2_INSTANCE_IP="54.221.97.206"
+
         # SSH into your EC2 instance and deploy the Docker container
-        ssh -i "key.pem" ubuntu@ec2-34-207-242-228.compute-1.amazonaws.com 'docker pull myapp:latest && docker run -d --name myapp -p 8080:80 myapp:latest'
-      env:
-        AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-        AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-        AWS_REGION: ${{ secrets.AWS_REGION }}
+        ssh -i key.pem ubuntu@$EC2_INSTANCE_IP 
+        docker pull myapp:latest 
+        docker run -d --name myapp -p 8080:80 myapp:latest'
+        
+      #env:
+       # AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        #AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        #AWS_REGION: ${{ secrets.AWS_REGION }}
