--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -5,7 +5,7 @@ on:
     branches:
       - main
 
-jobs:
+#jobs:
   deploy:
     runs-on: ubuntu-latest
 
@@ -44,7 +44,7 @@ jobs:
     - name: Deploy to EC2
       run: |
         # Copy the private key to the runner for SSH authentication
-        echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
+        echo ${{ secrets.SSH_PRIVATE_KEY }} > key.pem
         chmod 600 key.pem
 
         # Replace the EC2 instance IP address with your own
