--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,7 +48,5 @@ jobs:
         chmod 600 key.pem
         
         # SSH into your EC2 instance and deploy the Docker container
-        ssh -o StrictHostKeyChecking=no -i key.pem ubuntu@${{ secrets.EC2_INSTANCE_IP }} <<EOF
-        docker pull ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest 
-        docker run -d -p 8080:80 myapp1
+        ssh -i key.pem ubuntu@${{ secrets.EC2_INSTANCE_IP }} "docker pull ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest && docker run -d -p 8080:80 myapp1:latest"
         EOF
