--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -48,9 +48,11 @@ jobs:
         chmod 600 key.pem
 
         # SSH into your EC2 instance and deploy the Docker container
-        ssh -i key.pem -o StrictHostKeyChecking=no ubuntu@${{ secrets.EC2_INSTANCE_IP }} "docker pull ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest && docker run -d -p 8080:80 ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest"
+        ssh -i 'key.pem' -c 'docker pull ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest' ubuntu@${{ secrets.EC2_INSTANCE_IP }}
+        ssh -i 'key.pem' -c 'docker run -d -p 8080:80 ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest"' ubuntu@${{ secrets.EC2_INSTANCE_IP }}
+    
       env:
-        SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+      #  SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
         EC2_INSTANCE_IP: ${{ secrets.EC2_INSTANCE_IP }}
 
 
